# ralph-demo

./: .gitignore  README.md  pyproject.toml  ralph_config.yaml
docs/: Ralph_LLM适配器配置报告.md
prompts/: builder.md  critic.md  finalizer.md  planner.md
ralph/: __init__.py  cli.py  config.py  file_manager.py  hats.py  llm_adapter.py  orchestrator.py  scratchpad.py  test_runner.py
tests/: test_cli.py  test_config.py  test_file_manager.py  test_hats.py  test_integration.py  test_orchestrator.py  test_scratchpad.py  test_test_runner.py
